core/unpackaged/main/default/objects/Customer_Satisfaction__c/Customer_Satisfaction__c.object-meta.xml
<CustomObject>
    <label>Customer Satisfaction</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Satisfaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>