core/unpackaged/main/default/objects/Customer_Satisfaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Customer Satsifactions</relationshipLabel>
    <relationshipName>Customer_Satsifactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>