core/unpackaged/main/default/objects/Customer_Satisfaction__c/fields/Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satisfied?</label>
    <type>Checkbox</type>
</CustomField>